--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ section{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
     max-width: 100%;
     display: flex;
     flex-direction: column;
@@ -119,7 +118,7 @@ section{
     justify-content: center;
     flex-wrap:wrap;
     gap: 14px; 
-    margin-top: 20px; 
+    margin: 28px 0; 
 }
 
 .card-container{
