--- a/style.css
+++ b/style.css
@@ -7,35 +7,34 @@
 
 
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Baskervville SC", serif;
-    list-style: none;
     text-decoration: none;
-    
+
 }
 
-:root{
-    --body-color:#222222;
-    --text-color:#d5d4d499;
-    --black-color:#2b2b2b;
+:root {
+    --body-color: #222222;
+    --text-color: #d5d4d499;
+    --black-color: #2b2b2b;
     --white-text: #fff;
-    --black-color:#000;
-    --underline-color:#d1ab85;
+    --black-color: #000;
+    --underline-color: #d1ab85;
 }
 
-body{
-   background-color: var(--body-color); 
-   
+body {
+    background-color: var(--body-color);
+
 }
 
 /* 
     1-HEADER/MENU
 */
 
-header{
+header {
     max-width: 100%;
     height: 80px;
     display: flex;
@@ -45,28 +44,31 @@ header{
     font-size: 18px;
     background-color: var(--black-color);
     
+
 }
 
-.logo{
-    width: 10%;  
+.logo {
+    width: 10%;
     margin-left: 10px;
 }
 
-.logo img{
+.logo img {
     width: 100%;
 }
 
-.lista-container{
-    width: 88%;;
+.lista-container {
+    width: 88%;
+    ;
 }
-.lista-container ul{
+
+.lista-container ul {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
 }
 
-ul a{
+ul a {
     color: var(--white-text);
     text-decoration: none;
     position: relative;
@@ -74,7 +76,7 @@ ul a{
     letter-spacing: 1px;
 }
 
-ul a::after{
+ul a::after {
     content: '';
     position: absolute;
     left: 50%;
@@ -85,17 +87,16 @@ ul a::after{
     transition: width 0.4s ease, left 0.4s ease;
 }
 
- ul a:hover::after{
+ul a:hover::after {
     width: 100%;
     left: 0;
- }
+}
 
-
- /* 
+/* 
     2-SECTION/CARD
 */
 
-section{
+section {
     background-image: url(img/bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -106,40 +107,38 @@ section{
     gap: 30px;
 }
 
-.title-text{
+.title-text {
     text-align: center;
     font-size: 24px;
     font-weight: 900;
     margin: 24px 0;
 }
 
-.classe-container{
+.classe-container {
     display: flex;
     justify-content: center;
-    flex-wrap:wrap;
-    gap: 14px; 
-    margin: 28px 0; 
+    flex-wrap: wrap;
+    gap: 14px;
+    margin: 28px 0;
 }
 
-.card-container{
-    background-image: url(img/warrior-img/warrior1.png); 
+.card-container {
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat; 
     width: 200px;
     height: 300px;
     overflow: hidden;
-    padding: 2px;
     border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.8); 
+    box-shadow: 0px 4px 8px rgba(2, 2, 2, 0.8);
 }
 
-.card-container:hover{
-    transform: translate(1%, 1%) scale(1.1);
-    transition: all 1.5s;
+.card-container:hover {
+    transform: translate(0, 0) scale(1.1);
+    transition: all 1s;
+    box-shadow: 0px 4px 8px rgba(180, 252, 200, 0.8);
 }
 
-.card-info{
+.card-info {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -149,60 +148,54 @@ section{
     gap: 10px;
 }
 
-.card-info h2{
-   font-size: 1.8rem;
-   font-weight: 700;
-   color: var(--white-text);
-   padding-bottom: 2px;
-   letter-spacing: 0.8px;
+.card-info h2 {
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: var(--white-text);
+    padding-bottom: 2px;
+    letter-spacing: 0.8px;
 }
 
-.card-info img{
+.card-info img {
     width: 60px;
 }
 
 
-
-
-
-
-
-
-
-
-
- /* 
+/* 
     BREAK POINT 
  */
 
-@media screen and (max-width:576px ) {
-    .container{
-        width: 100%;
+@media screen and (max-width:576px) {}
+
+@media screen and (min-width:576px) {}
+
+@media screen and (max-width:768px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
+    }
+
+    .logo {
+        width: 80%;
+        text-align: center;
+    }
+
+    .lista-container ul {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card-container {
+        width: 150px;
+        /* Ajuste o tamanho dos cards conforme necessário */
+        height: 200px;
     }
 }
-@media screen and (min-width:576px ) {
-    .container{
-        width: 540px;
-    }
-}
-@media screen and (min-width:768px ) {
-    .container{
-        width: 720px;
-    }
-}
-@media screen and (min-width:992px ) {
-    .container{
-        width: 960px;
-    }
-}
-@media screen and (min-width:1200px ) {
-    .container{
-        width: 1140px;
-    }
-}
-@media screen and (min-width:1400px ) {
-   .container{
-    width: 1320px;
-   }
-    
-}
+
+@media screen and (min-width:992px) {}
+
+@media screen and (min-width:1200px) {}
+
+@media screen and (min-width:1400px) {}
