--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,10 @@ header {
     align-items: center;
     font-weight: 600;
     font-size: 18px;
-    background-color: var(--black-color);
-    
+    background-color: var(--black-color);  
 
 }
+
 
 .logo {
     width: 10%;
@@ -58,7 +58,6 @@ header {
 
 .lista-container {
     width: 88%;
-    ;
 }
 
 .lista-container ul {
@@ -91,7 +90,6 @@ ul a:hover::after {
     width: 100%;
     left: 0;
 }
-
 /* 
     2-SECTION/CARD
 */
@@ -112,6 +110,7 @@ section {
     font-size: 24px;
     font-weight: 900;
     margin: 24px 0;
+    color: var(--white-text);
 }
 
 .classe-container {
@@ -134,7 +133,7 @@ section {
 
 .card-container:hover {
     transform: translate(0, 0) scale(1.1);
-    transition: all 1s;
+    transition: all 0.2s;
     box-shadow: 0px 4px 8px rgba(180, 252, 200, 0.8);
 }
 
@@ -189,7 +188,6 @@ section {
 
     .card-container {
         width: 150px;
-        /* Ajuste o tamanho dos cards conforme necessário */
         height: 200px;
     }
 }
