--- a/css/classe.css
+++ b/css/classe.css
@@ -62,11 +62,6 @@ header{
     justify-content: end;
 }
 
-/* .banner-bg{
-    width: 100%;
-    height: 44em;
-} */
-
 .warrior {
     width: 100%;
     max-height: 80px;
@@ -79,23 +74,24 @@ header{
 
 .info-guerreiro{
     height: 100%;
-    /* padding: 70px; */
     background: url("/img//warrior/bg-warrior.jpg");
     background-size: cover;
 }
 
-.info-inicial{
-    max-width: 600px;
+.info-inicial {
+    max-width: 700px;
     width: 100%;
-    height: auto;
+    height: 100%;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 70px;
+    padding:50px;
+    align-items: center;
 }
 
 .linha{
+    max-width: 600px;
     height: 1px;
     width: 100%;
     background-color: var(--body-color);
@@ -105,31 +101,31 @@ header{
 .armas{
     display: flex;
     justify-content: center;
-    gap: 60px;
+    gap: 30px;
     text-align: center;
     margin: 20px 0;
 }
 
 h1{
-    font-size: 32px;
+    font-size: 2rem;
     letter-spacing: 1.5px;
     font-weight: 900;
 }
 
 h4{
     color: var(--purple-text);
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 h3{
-    font-size: 24px;
+    font-size: 1.2rem;
 }
 .apresentacao-classe{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 36px;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
 }
 
@@ -146,20 +142,23 @@ h3{
 */
 .despertar-container{
     height: 100%;
+    background: url("/img//warrior/bg-despertar.jpg");
+    background-position-x: start;
     display: flex;
     justify-content: flex-end;
-    background: url("/img//warrior/bg-despertar.jpg");
     background-size: cover;
-    background-position: left;
+
 }
 
-.content-despertar{
+.content-despertar {
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    padding: 70px;
+    padding: 50px;
+    max-width: 700px;
+    text-align: center;
 }
 
 .classe-despertar{
@@ -175,24 +174,60 @@ h3{
 /* 
     4- SEÇÃO ASCENÇÃO
 */
-.ascencao-container{
+.ascencao-container {
     background: url(/img/warrior/warrior-asc.jpg);
-    height: 100vh;
-    padding: 80px 44px 80px 0;
+    background-size: cover;
+   height: 100%;
+   
 }
 
 .classe-asencao{
+    max-width: 700px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    padding:50px;
     align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    max-width: 60%;
-    padding: 20px;
     color: var(--white-text);
 }
 
 
 
  
+@media screen and (max-width:600px) {
+    .video-classe{
+        width: 100%;
+        height: 200px;
+        max-width: 300px;
+        border: none; 
+}
 
+.despertar-container{
+    height: 100%;
+    background: url("/img//warrior/bg-despertar.jpg");
+    background-position-x:right;
+    display: flex;
+    justify-content: flex-end;
+    background-size:auto;
+
+}
+
+.armas{
+    display: flex;
+    flex-direction: column;
+}
+
+h1,h2,h3,h4{
+    font-size: 1.2rem;
+}
+
+p{
+    font-size: 0.8rem;
+}
+.text{
+    display:block;
+}
+}
